platform/k8s-admin/k8s-dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: "69.30.233.178"
spec:
  entryPoints:
    - websecure
  tls:
    certResolver: le
  routes:
    # API: no basic-auth
    - match: Host(`k8s.xn--cyberlnx-ykb.com`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: kubernetes-dashboard-kong-proxy
          port: 443
          scheme: https
          serversTransport: dash-insecure
    # UI: with basic-auth
    - match: Host(`k8s.xn--cyberlnx-ykb.com`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: dashboard-basicauth
          namespace: traefik
      services:
        - name: kubernetes-dashboard-kong-proxy
          port: 443
          scheme: https
          serversTransport: dash-insecure
